syntax = "proto3";

package user;

option go_package = "/user";

message User {
  string first_name = 1;
  string last_name = 2;
  int32 id = 3;
  string email = 4;
}
