syntax = "proto3";

package user;

option go_package = "/user-v2";

message Email {
  string address = 1;
}

message User {
  int32 writer_version = 1;

  string first_name = 2;

  // renaming a last_name field
  string surname = 3;

  // removing a field that was defined in the previous version
  // string middle_name = 4;

  int32 id = 5;

  // This change is forward compatible, but NOT backwards compatible!
  // a v1 schema reader cannot parse the new type.
  // but, a v2 schema reader is able to parse the old type.
  // email was a string in the previous version.
  Email email = 6;

  // adding a field that was not in the previous version
  int32 age = 7;
}
